# agent-k

./: .env.example  .gitignore  Cargo.toml
agent-k/: Cargo.toml
agent-k/src/: lib.rs
app/: .npmrc  e2e-ws.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
app/scripts/: run_cowork_demo.sh  seed_automation_demo.py  seed_cowork_demo.py
app/src/: main.tsx  routeTree.gen.ts  test-utils.tsx
backend/: .env.template  Cargo.toml
backend-v2/: Cargo.toml
backend-v2/src/: cli.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
backend-v2/tests/: auth_test.rs  dirent_test.rs  document_test.rs  e2e_test.rs  message_history_persistence.rs  project_test.rs  sandbox_per_session.rs  session_authz_test.rs  session_fork_test.rs
backend/migrations/: 0004_automations.sql  0004_session_metadata.sql  0006_automations.sql  0007_ingest_jobs.sql  0007_message_attachments.sql  0008_project_slug.sql  0009_model_selection.sql  0009_users_preferred_language.sql  0010_model_selection.sql  0011_project_pdf_engine.sql  0012_agent_capabilities.sql  0012_team_messages.sql
backend/src/: agent_run.rs  authz.rs  cli.rs  cron.rs  events.rs  handlers.rs  ingest_worker.rs  lib.rs  main.rs  models.rs  prompt.rs  router.rs  state.rs  storage.rs  worker.rs
backend/tests/: auth_test.rs  automation_test.rs  dirent_test.rs  document_test.rs  (+9 more)
backend_v2/: Cargo.toml
chat-agent/: Cargo.toml  README.md
chat-agent/src/: chat_agent.rs  lib.rs  tools.rs
chat-agent/src/speedwagon/: dispatch.rs  mod.rs
chat-agent/src/tools/: mod.rs  open.rs
chat-agent/tests/: routing_test.rs
convert-pdf-to-md/: README.md  build.sh  convert_pdf_to_md.py
directory/: Cargo.toml
directory/src/: lib.rs
directory/src/dir/: mod.rs
directory/src/dir/impl/: knowledge_base.rs  mod.rs  raw.rs
directory/src/dir_source/: mod.rs
directory/src/dir_source/impl/: google_drive.rs  local.rs  mod.rs
docker/: Dockerfile
docling-sys/: Cargo.toml  build.rs
docling-sys/examples/: smoke.rs
docling-sys/python/: README.md  pyproject.toml  run_docling.py
docling-sys/src/: lib.rs
docs/: conventions.md
knowledge-agent/: Cargo.toml  README.md  settings.json
reflect-agent/: Cargo.toml
scripts/: run_deep_research_eval.py
speedwagon/: Cargo.toml
(+370 files in other folders)
