[workspace]
resolver = "3"
members = [
    "./agent-k",
    "./backend",
    "./docling-sys",
    "./reflect-agent",
]

[workspace.dependencies]
agent-k = { path = "./agent-k" }
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "2086bfdac663f81d3ca230b7fb4856a702576577", features = ["sandbox"] }
