[workspace]
resolver = "3"
members = [
    "./agent-k",
    "./backend",
    "./docling-sys",
    "./reflect-agent",
]

[workspace.dependencies]
agent-k = { path = "./agent-k" }
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "226d1a6ab841ddd77f37e82814166044112dfd3e", features = ["sandbox"] }
