[workspace]
resolver = "3"
members = [
    "./agent-k",
    "./backend",
    "./docling-sys",
    "./reflect-agent",
]

[workspace.dependencies]
agent-k = { path = "./agent-k" }
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "dc3d7bc19e400a4d0d4d850e55bec80bfa95aa8b", features = ["sandbox"] }
