[package]
name = "chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "55c472cb1f1450cc82cdc028e5450e2398d7418e" }
anyhow = "1.0.100"
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
