[package]
name = "space"
version = "0.1.0"
edition = "2024"

[lib]
name = "space"
path = "src/lib.rs"

[dependencies]
ailoy = { workspace = true }
anyhow = "1.0.100"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
