[package]
name = "docling-sys"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "fs"] }

[features]
default = []
# Skip the (slow) PyInstaller build at compile time. Calls to the runtime
# API will return an error. Useful for unrelated workspace builds in CI.
skip-bundle = []
